--- a/templates/dashboard_admin.html
+++ b/templates/dashboard_admin.html
@@ -49,7 +49,7 @@
                         <td class="px-5 py-4 font-medium text-gray-900">#{{ b.id }}</td>
                         <td class="px-5 py-4 font-semibold text-emerald-700">{{ b.username }}</td>
                         <td class="px-5 py-4 text-gray-600">{{ b.table_number }}</td>
-                        <td class="px-5 py-4 text-gray-600">{{ b.start_time.strftime('%d-%m-%Y %H:%M') }}</td>
+                        <td class="px-5 py-4 text-gray-600">{{ b.start_time | format_datetime }}</td>
                         <td class="px-5 py-4 text-gray-600">{{ b.duration }} Jam</td>
                         <td class="px-5 py-4 text-center">
                             <span class="px-3 py-1 text-xs font-semibold rounded-full 
